@@ -1,6 +1,7 @@
 
 /*
   Copyright (C) 2002, 2003 Decillion Pty(Ltd).
+  Copyright (C) 2005 StatPro Italia srl
 
   This file is part of QuantLib, a free-software/open-source library
   for financial quantitative analysts and developers - http://quantlib.org/
@@ -23,31 +24,50 @@
 #define quantlib_discount_curve_hpp
 
 #include <ql/termstructure.hpp>
-#include <ql/DayCounters/actual365fixed.hpp>
-#include <ql/Math/loglinearinterpolation.hpp>
+#include <ql/Math/interpolation.hpp>
+#include <vector>
 
 namespace QuantLib {
 
-    //! Term structure based on loglinear interpolation of discount factors
-    /*! Loglinear interpolation guarantees piecewise constant forward rates.
-
-        Rates are assumed to be annual continuous compounding.
+    //! Term structure based on interpolation of discount factors
+    /*! Log-linear interpolation (the default) guarantees
+        piecewise-constant forward rates.
 
         \ingroup yieldtermstructures
     */
     class DiscountCurve : public YieldTermStructure {
       public:
-        // constructor
         DiscountCurve(const std::vector<Date>& dates,
                       const std::vector<DiscountFactor>& dfs,
                       const DayCounter& dayCounter);
-        DayCounter dayCounter() const { return dayCounter_; }
+        //! \name Inspectors
+        //@{
+        DayCounter dayCounter() const;
         Date maxDate() const;
         Time maxTime() const;
         const std::vector<Time>& times() const;
         const std::vector<Date>& dates() const;
         const std::vector<DiscountFactor>& discounts() const;
+        //@}
+        //! \name Modifiers
+        //@{
+        template <class Traits>
+        #if defined(QL_PATCH_MSVC6)
+        void setInterpolation(const Traits&) {
+        #else
+        void setInterpolation() {
+        #endif
+            interpolation_ =
+                Traits::make_interpolation(times_.begin(), times_.end(),
+                                           discounts_.begin());
+            update();
+        }
+        //@}
       protected:
+        DiscountCurve(const DayCounter&);
+        DiscountCurve(const Date& referenceDate, const DayCounter&);
+        DiscountCurve(Integer settlementDays, const Calendar&,
+                      const DayCounter&);
         DiscountFactor discountImpl(Time) const;
         Size referenceNode(Time) const;
         DayCounter dayCounter_;
@@ -57,27 +77,32 @@ namespace QuantLib {
         mutable Interpolation interpolation_;
     };
 
+
     // inline definitions
 
-    inline const std::vector<Date>& DiscountCurve::dates() const {
-        return dates_;
+    inline DayCounter DiscountCurve::dayCounter() const {
+        return dayCounter_;
     }
 
     inline Date DiscountCurve::maxDate() const {
         return dates_.back();
     }
 
-    inline const std::vector<DiscountFactor>&
-    DiscountCurve::discounts() const {
-        return discounts_;
+    inline Time DiscountCurve::maxTime() const {
+        return times_.back();
     }
 
     inline const std::vector<Time>& DiscountCurve::times() const {
         return times_;
     }
 
-    inline Time DiscountCurve::maxTime() const {
-        return times_.back();
+    inline const std::vector<Date>& DiscountCurve::dates() const {
+        return dates_;
+    }
+
+    inline const std::vector<DiscountFactor>&
+    DiscountCurve::discounts() const {
+        return discounts_;
     }
 
 }
